--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-helmet": "^6.1.0",
+    "react-textfit": "^1.1.1",
     "react-use-gesture": "^9.1.3",
     "sass": "^1.32.8"
   },
