--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "gatsby-source-sanity": "^6.0.4",
     "gatsby-transformer-json": "^2.4.11",
     "gatsby-transformer-sharp": "^2.5.16",
+    "gsap": "^3.6.1",
     "lethargy": "^1.0.9",
+    "locomotive-scroll": "^4.1.1",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "react-fitty": "1.0.0",
     "react-helmet": "^6.1.0",
     "react-use-gesture": "^9.1.3",
     "sass": "^1.32.8"
