--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "package.json",
   "author": "Joe Boylson <joeboylson@gmail.com>",
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "start-sanity": "sanity start",
     "deploy-sanity": "sanity deploy && sanity graphql deploy",
